--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,10 @@
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
     "@hookform/resolvers": "^3.3.2",
+    "@material-tailwind/react": "^2.1.5",
     "@reduxjs/toolkit": "^1.9.7",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@tanstack/react-query": "^5.12.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +19,7 @@
     "moment": "^2.29.4",
     "rc-drawer": "^4.4.2",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.2",
     "react-hook-form": "^7.47.0",
@@ -29,6 +32,8 @@
     "react-spinners": "^0.13.4",
     "react-toastify": "^9.0.8",
     "swiper": "^8.4.2",
+    "video.js": "^8.6.1",
+    "videojs-contrib-quality-levels": "^4.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
