--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
     "@hookform/resolvers": "^3.3.2",
-    "@material-tailwind/react": "^2.1.5",
+    "@material-tailwind/react": "^2.1.7",
     "@reduxjs/toolkit": "^1.9.7",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-query": "^5.12.2",
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^1.5.1",
+    "file-saver": "^2.0.5",
     "file-server": "^2.2.1",
     "moment": "^2.29.4",
     "rc-drawer": "^4.4.2",
